change to index

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Provisioning Test Page</title>
+  <title>Fully Automated End-End CI/CD Pipeline</title>
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
   <style type="text/css">
     body {
