--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
   <div class="vertical-center">
     <h1>Welcome to the Sparta Test App</h1>
     <img src="/images/squarelogo.jpg" />
-    <h2>ThiS iS a cIcD PiPeLiNe.</h2>
+    <h2>ThiS iS a cIcD PiPeLiNe. TEST</h2>
     
   </div>
 </body>
