--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
   <div class="vertical-center">
     <h1>Welcome to the Sparta Test App</h1>
     <img src="/images/squarelogo.jpg" />
-    <h2>AUTOMATION OF CI/CD PIPELINE</h2>
+    <h2>Demo of how to automate microservices architecture<h2>
     
   </div>
 </body>
